2-MicroService/k8s-app/istio-sample-ingress-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k8s-app-ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-sample
spec:
  hosts:
    - "*"
  gateways:
    - k8s-app-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /api # or exact
      route:
        - destination:
            host: portal
            port:
              number: 8000
